Fixed white space from removing woocommerce breadcrumb

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -62,8 +62,14 @@ $woocommerce__color-tr-odd: #ECECEC;
     }
 
     .woocommerce-breadcrumb {
-        display: none;
+        display: none !important;
+        margin: 0 !important;
     }
+
+    .entry-summary {
+        margin: 0 !important;
+    }
+
 
     .veldhuizen__container {
         grid-template-columns: repeat(auto-fill, minmax(calc(25% - 10px), 1fr));
@@ -361,16 +367,16 @@ $woocommerce__color-tr-odd: #ECECEC;
 
 .woocommerce-notices-wrapper {
     position: absolute; 
-    top: 50vh;
+    top: 205px;
     z-index: 5;
     left: 50%;
     transform: translateX(-50%);
-    box-shadow: 3px 3px 5px rgba(221, 221, 221, 0.384);
+    box-shadow: 2px 2px 4px rgba(75, 75, 75, 0.384);
 
     .woocommerce-message {
         width: auto;
 
-        .wc-forward {
+        .wc-forward,  {
             margin-right: 10px;
             background-color: $veldhuizen__oranje;
             padding: 15px;
@@ -379,6 +385,23 @@ $woocommerce__color-tr-odd: #ECECEC;
             -moz-transition: background-color 0.3s ease-in-out;
             -o-transition: background-color 0.3s ease-in-out;
             transition: background-color 0.3s ease-in-out;
+            box-shadow: 2px 2px 4px rgba(46, 46, 46, 0.527);
+
+            &:hover {
+                background-color: #555555;
+            }
+        }
+        
+        .restore-item {
+            margin-right: 10px;
+            background-color: $veldhuizen__oranje;
+            padding: 15px;
+            text-decoration: none;
+            -webkit-transition: background-color 0.3s ease-in-out;
+            -moz-transition: background-color 0.3s ease-in-out;
+            -o-transition: background-color 0.3s ease-in-out;
+            transition: background-color 0.3s ease-in-out;
+            box-shadow: 2px 2px 4px rgba(46, 46, 46, 0.527);
 
             &:hover {
                 background-color: #555555;
